--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,5 +1,5 @@
 #################### default parameters ################################
-logo = "images/logo.png"
+logo = "images/ws-logo.png"
 logo_width = "200px"
 # OpenGraph / Twitter Card metadata
 description = "This is meta description"
@@ -19,7 +19,7 @@ preloader = "" # use jpg, png, svg or gif format.
 # Navigation buttons
 [navigation_button]
 enable = true
-label = "Get Started"
+label = "Kom Igång"
 link = "contact"
 
 # cookies
