Set swedish page to be default, hiding language options for now

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,4 +1,6 @@
-######################## default configuration ####################
+languageCode = 'sv'
+defaultContentLanguage = 'sv'
+
 baseURL = "https://webbsnickaren.se/"
 title = "Webbsnickaren"
 theme = "bigspring-light"
