--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,9 +1,29 @@
+
+
+############################# Svenska ############################
+[sv]
+disabled = false
+languageName = "Sv"
+contentDir = "content/sv"
+title = "Webbsnickaren"
+weight = 1
+########### footer content ##########
+footer_menu_left = "Företag"
+footer_menu_middle = "Produkt"
+footer_menu_right = "Support"
+footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
+# copyright
+copyright = "Design von [Themefisher](https://themefisher.com/) Entwickelt von [Gethugothemes](https://gethugothemes.com/)"
+
+
+
 ############################# English ############################
 [en]
+disabled = true
 languageName = "En"
 title = "Webbsnickaren"
 contentDir = "content/english" # content/english
-weight = 1
+weight = 2
 ########### footer content ##########
 footer_menu_left = "Company"
 footer_menu_middle = "Product"
@@ -12,18 +32,3 @@ footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristiqu
 # copyright
 copyright = "Design By [Themefisher](https://themefisher.com/) Develop By [Gethugothemes](https://gethugothemes.com/)"
 
-
-
-############################# Svenska ############################
-[se]
-languageName = "Se"
-title = "Webbsnickaren"
-contentDir = "content/svenska"
-weight = 2
-########### footer content ##########
-footer_menu_left = "Företag"
-footer_menu_middle = "Produkt"
-footer_menu_right = "Support"
-footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
-# copyright
-copyright = "Design von [Themefisher](https://themefisher.com/) Entwickelt von [Gethugothemes](https://gethugothemes.com/)"
