--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -26,26 +26,26 @@ link = "contact"
 [cookies]
 enable = false
 expire_days = 2
-content = "This site uses cookies. By continuing to use this website, you agree to their use."
-button = "I Accept"
+content = "Denna sidan använder kakor. Genom att använda denna hemsida accepterar du dessa."
+button = "Jag godkänner"
   
 ############################# social site ########################
-[[social]]
-title = "facebook"
-icon = "fab fa-facebook" # themify icon : https://themify.me/themify-icons
-link = "#"
+#[[social]]
+#title = "facebook"
+#icon = "fab fa-facebook" # themify icon : https://themify.me/themify-icons
+#link = "#"
 
-[[social]]
-title = "twitter"
-icon = "fab fa-twitter" # themify icon : https://themify.me/themify-icons
-link = "#"
+#[[social]]
+#title = "twitter"
+#icon = "fab fa-twitter" # themify icon : https://themify.me/themify-icons
+#link = "#"
 
-[[social]]
-title = "skype"
-icon = "fab fa-skype" # themify icon : https://themify.me/themify-icons
-link = "#"
+#[[social]]
+#title = "skype"
+#icon = "fab fa-skype" # themify icon : https://themify.me/themify-icons
+#link = "#"
 
-[[social]]
-title = "linkedin"
-icon = "fab fa-linkedin" # themify icon : https://themify.me/themify-icons
-link = "#"
+#[[social]]
+#title = "linkedin"
+#icon = "fab fa-linkedin" # themify icon : https://themify.me/themify-icons
+#link = "#"
