--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -11,7 +11,7 @@ weight = 1
 footer_menu_left = "Företag"
 footer_menu_middle = "Produkt"
 footer_menu_right = "Support"
-footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
+footer_content = "Något här?"
 # copyright
 copyright = "Design von [Themefisher](https://themefisher.com/) Entwickelt von [Gethugothemes](https://gethugothemes.com/)"
 
