#6: Fixed meta description, and default logo

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,9 +2,9 @@
 logo = "images/ws-logo.png"
 logo_width = "200px"
 # OpenGraph / Twitter Card metadata
-description = "This is meta description"
+description = "Webbsnickaren, vi hjälper dig skapa en hemsida, att förbättra din SEO, och att synas på Internet och i sociala medier"
 author = "Themefisher"
-image = "images/logo.png" # this image will be used as fallback if a page has no image of its own
+image = "images/ws-logo.png" # this image will be used as fallback if a page has no image of its own
 # contact form action
 contact_form_action = "#" # contact form works with https://formspree.io
 
