--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -11,7 +11,7 @@ weight = 1
 footer_menu_left = "Företag"
 footer_menu_middle = "Produkt"
 footer_menu_right = "Support"
-footer_content = "Något här?"
+footer_content = "Fokusera vad du är bäst på, så gör vi detsamma. "
 # copyright
 copyright = "Design von [Themefisher](https://themefisher.com/) Entwickelt von [Gethugothemes](https://gethugothemes.com/)"
 
