Updated cookie text

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -26,7 +26,7 @@ link = "contact"
 [cookies]
 enable = true
 expire_days = 2
-content = "Denna sidan använder kakor. Genom att använda denna hemsida accepterar du dessa."
+content = "Denna sidan använder glutenfria kakor. Genom att använda denna hemsida accepterar du dessa synder."
 button = "Jag godkänner"
   
 ############################# social site ########################
