--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,10 +1,10 @@
 #################### default parameters ################################
-logo = "images/saw_hammer logo.png"
+logo = "images/saw_hammer logo scaled.png"
 logo_width = "200px"
 # OpenGraph / Twitter Card metadata
 description = "Webbsnickaren, vi hjälper dig skapa en hemsida, att förbättra din SEO, och att synas på Internet och i sociala medier"
 author = "Webbsnickaren"
-image = "images/saw_hammer logo.png" # this image will be used as fallback if a page has no image of its own
+image = "images/saw_hammer logo scaled.png" # this image will be used as fallback if a page has no image of its own
 # contact form action
 contact_form_action = "#" # contact form works with https://formspree.io
 
